<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_chng_pass"
    tools:context=".UpdatePasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp">


        <RelativeLayout
            android:id="@+id/Rl_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="15dp">


            <TextView
                android:id="@+id/txtHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:text="@string/update_password1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtHeader"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:textColor="@color/white"
                android:text="@string/current_password"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPassword"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:background="@color/white"
                android:padding="6dp"
                android:textSize="16sp" />


            <Button
                android:id="@+id/btnAuthenticate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtPass"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:text="@string/authenticate" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Rl_Reset_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Rl_Pass"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:padding="15dp">


            <TextView
                android:id="@+id/txtDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:padding="6dp"
                android:text=""
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txtNewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/txtDisplay"
                android:textColor="@color/white"
                android:padding="6dp"
                android:text="@string/new_password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtnewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNewEmail"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:background="@color/white"
                android:padding="6dp"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txtConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:layout_below="@+id/edtnewPass"
                android:padding="6dp"
                android:text="@string/confirm_password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_below="@id/txtConfirm"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:padding="6dp"
                android:textSize="16sp" />



            <Button
                android:id="@+id/btnResetPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtConfirm"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="70dp"
                android:text="@string/update_password" />
        </RelativeLayout>


    </RelativeLayout>


</ScrollView>