<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateGenderActivity"
    android:background="@drawable/back_chng_pass">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_gender"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:id="@+id/txtHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtHeader"
            android:id="@+id/txtName"
            android:text="@string/name"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:padding="6dp"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/edtName"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtName"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtName"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:padding="6dp"
            android:text="@string/email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtEmail"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="16sp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtEmail"
            android:id="@+id/txtGender"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:padding="6dp"
            android:textSize="16sp"
        />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@id/txtGender">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:buttonTint="@color/white"
                android:minHeight="48dp"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="50dp"
                android:buttonTint="@color/white"
                android:minHeight="48dp"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RadioGroup>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnResetProfile"
            android:layout_below="@id/rgGender"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="UpdateProfile"/>




    </RelativeLayout>

</ScrollView>